# temp

./: Cargo.toml  README.md  Readme  argument  canister_ids.json  default.nix  dfx.json
.github/workflows/: deploy.yml
scripts/: add_controller.sh  candid_generator.rs  candid_generator.sh  upload_asset_wasm.sh  upload_token_wasm.sh
scripts/local/: copy_token_to_wasm.sh  upload_token_wasm.sh
src/asset_proxy/: Cargo.toml  Readme  can.did
src/asset_proxy/src/: admin.rs  asset.rs  canisters.rs  lib.rs  state.rs  types.rs
src/backend/: Cargo.toml  can.did
src/backend/src/: controller.rs  default.rs  lib.rs  models.rs  utils.rs
src/backend/src/api/: add_car_api.rs  cancel_reservation_api.rs  get_car_details_api.rs  list_all_cars_api.rs  mod.rs  monitoring.rs  remove_car_api.rs  reserve_a_car_api.rs  send_email.rs
src/backend/src/tests/: test.rs
src/backend/src/utils/: date_time.rs  mod.rs
src/provision/: Cargo.toml  Readme  can.did
src/provision/src/: lib.rs  state.rs
src/provision/src/admin/: admin.rs
src/provision/src/canisters/: asset_permission.rs  asset_proxy_canister.rs  assets.rs  delete_canister.rs  mod.rs  token.rs
src/provision/src/collection/: collection_config.rs  collection_request.rs  mod.rs
src/token/: Cargo.toml  Readme  can.did
src/token/src/: lib.rs  ports.rs  validations.rs
src/token/src/permissions/: mod.rs
src/token/src/state/: escrow.rs  icrc1.rs  icrc7.rs  index_canister.rs  metadata.rs  mod.rs  models.rs  service.rs  state.rs  subaccount.rs  supported_standards.rs  token.rs  transactions.rs
wasm/asset/: can.did
