[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
#chrono = { version = "0.4", features = ["serde"] }
# pocket-ic = "5.0.0"

[dev-dependencies]
pocket-ic = "5.0.0"
