[package]
name = "token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16.0"
ic-ledger-types = "0.14.0"
icrc-ledger-types = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "*"
hex = {version = "0.4.3", features = ["serde"]}
sha2 = "0.10.8"
crc32fast = "1.3"
